# vera

./: .gitignore  ChangeLog  Makefile.am  README.md  cgroup.controllers  configure.ac  current_containers_info.H  current_containers_infofwd.H  external_filedesc.C  external_filedesc.H  external_filedesc_privcmdsocket.C  external_filedesc_privcmdsocket.H  hook.C  hook.H  inittab.C  inittab.H  loadtest.save  log.C  log.H  log_current_time.C  messages.H  parsed_yaml.C  parsed_yaml.H  poller.C  poller.H  privrequest.C  privrequest.H  proc_container.C  proc_container.H  proc_container2.C  proc_container_group.C  proc_container_group.H  proc_container_run_info.H  proc_container_runner.C  proc_container_runner.H  proc_container_runnerfwd.H  proc_container_state.C  proc_container_state.H  proc_container_statefwd.H  proc_container_timer.C  (+48 more)
packaging/slackware/: doinst.sh  networkmanager-wait-online  uninst.sh
po/: .gitignore  Makevars
